add fonts and add placeholder icons to ui

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/img/DYNAMIS_ColourSignet.svg">
     <!-- ? unable to load tailwindcss file properly with url: '/css/index.css' -->
     <link rel="stylesheet" href="/public/css/index.css">
+    <link rel="stylesheet" href="/fonts/feather/feather.css">
     <title>Journey Planner</title>
 </head>
 
