--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- ? unable to load tailwindcss file properly with url: '/css/index.css' -->
     <link rel="stylesheet" href="/public/css/index.css">
     <link rel="stylesheet" href="/fonts/feather/feather.css">
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
     <title>Journey Planner</title>
 </head>
 
