initial stops api implementation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Journey Planning Tool">
     <link rel="icon" href="/img/DYNAMIS_ColourSignet.svg">
     <!-- ? unable to load tailwindcss file properly with url: '/css/index.css' -->
+    <!-- ? for some reason the bundler stores the folder under 'public/css/' instead of 'css/' -->
     <link rel="stylesheet" href="/public/css/index.css">
     <link rel="stylesheet" href="/fonts/feather/feather.css">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
